Table always visible, countdown stops when running code and submitting

--- a/public/main.css
+++ b/public/main.css
@@ -79,7 +79,7 @@ header {
 }
 
 table {
-    display: none;
+    display: block;
     margin-left: 19%;
 }
 
